<resources>
    <string name="app_name">Coroutines Course</string>
    <string name="first_example">Exemplo básico</string>
    <string name="second_example">Altering context</string>
    <string name="display_text">Display text</string>
    <string name="get_result">Get result</string>
    <string name="network_timeout">Network timeout</string>
    <string name="coroutines_jobs">Coroutines Jobs</string>
    <string name="parallel_jobs">Parallel Jobs</string>
    <string name="click_me">Click me</string>
    <string name="async_and_await">Async and await</string>
    <string name="sequential_job_async_await">Sequential job async await</string>
    <string name="run_blocking">Run blocking</string>
</resources>